<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="#0099cc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/label_input_volume_level"
            android:textAppearance="?android:attr/textAppearanceLarge" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/input_volume_level"
	            android:src="@drawable/ic_voice_search" />
	
	        <view
	            android:id="@+id/bar_level_drawable_view"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_gravity="center_vertical"
	            android:layout_weight=".85"
	            class="com.google.speech.levelmeter.BarLevelDrawable"
	            android:gravity="center_vertical" />

        </LinearLayout>
        
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_audio_input_hint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
	    <CheckedTextView
	        android:id="@+id/inputAttenCheckBox"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
	        android:checked="true"
	        android:gravity="center_vertical"
	        android:text="@string/label_input_atten"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#000000" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_input_atten_hint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	</LinearLayout>

</LinearLayout>