<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewFirmware"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title_right_text_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|fill_horizontal"
                android:gravity="left"
                android:text="@string/title_not_connected"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/toggleButtonConnect_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect_button"
                android:textOff="@string/connect_button"
                android:textOn="@string/disconnect_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
